--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Workshop</title>
+    <title>Flower</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    
+    <div>
+        <header>Sunflower</header>
+        <h1> A Symbol of Beauty and Resilience</h1>
+        <p>
+            The sunflower <i> (Helianthus annuus)</i> is one of nature's most captivating creations,
+            known for its bright yellow petals and unique ability to follow the sun.
+            This iconic plant, native to North America, has transcended its origins
+            to become a universal symbol of adoration, loyalty, and longevity.
+            Its scientific name, derived from Greek words "helios" (sun) and "anthos" (flower),
+            perfectly encapsulates its radiant personality.
+        </p>
+
+    </div>
 </body>
+
 </html>
