--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div>
         <header>Sunflower</header>
         <h1> A Symbol of Beauty and Resilience</h1>
+        <img src="sunflower.PNG" alt="sunflower image">
         <p>
             The sunflower <i> (Helianthus annuus)</i> is one of nature's most captivating creations,
             known for its bright yellow petals and unique ability to follow the sun.
